# swe_dhbw

./: .coverage  .gitignore  .pylintrc  README.md  TODO.md  mvc.puml  pyproject.toml  test.txt
src/: backup_2026-02-06_08-27-36.txt  backup_2026-02-06_08-27-38.txt  main.py
src/Controller/: BackupManager.py  DateiManager.py  FlowController.py  KIAnalyzer.py  LoginController.py  auth_flow.py  backup_flow.py  backup_manager.py  chat_core_flow.py  chat_file_flow.py  chat_history_service.py  chat_worker.py  datei_manager.py  file_access_flow.py  file_list_flow.py  file_mutation_flow.py  file_path_service.py  file_utils.py  flow_controller.py  history_flow.py  ki_analyzer.py  settings_flow.py  user_settings_store.py
src/Model/: Bewertung.py  Fehlerprotokoll.py  Fehlertyp.py  Konfiguration.py  MoodleAPI.py  PfadValidator.py  Zusammenfassung.py  moodle_api.py  pfad_validator.py
src/View/: Benutzer.py  ChatHistoryView.py  ChatView.py  DateiListeView.py  Hauptoberflaeche.py  LoginView.py  MenueView.py  PfadView.py  SettingsDialog.py  chat_history_view.py  chat_view.py  datei_liste_view.py  login_view.py  menue_view.py  pfad_view.py  settings_dialog.py
src/controller/: backup_manager.py  file_mutation_flow.py  file_path_service.py  history_flow.py
src/controller_temp/: backup_flow.py  chat_worker.py  ki_analyzer.py  user_settings_store.py
src/view/: chat_history_view.py  chat_view.py  pfad_view.py
tests/: conftest.py
tests/acceptance/: test_file_listing_acceptance.py
tests/gui/: test_chat_view_qt.py  test_chat_view_qt_more.py  test_datei_liste_view_qt.py  (+2 more)
(+33 files in other folders)
